Refactor ActivityController and SecurityConfiguration
Streamlined ActivityController methods for improved readability and efficiency, removing redundant code and adding better data validation. Updated SecurityConfiguration to clarify permissions, enable HTTP Basic authentication, and restrict unauthorized operations.